[package]
name = "prdt-viewer"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# PR5a: this crate is now lib-only. The legacy prdt-viewer.exe shim was
# removed; users invoke `prdt connect [...]` via the prdt-client bin,
# which calls into prdt_viewer::run_with_args directly.

[dependencies]
prdt-audio = { path = "../audio" }
prdt-crypto = { path = "../crypto" }
prdt-filetransfer = { path = "../filetransfer" }
prdt-nat-traversal = { path = "../nat-traversal" }
prdt-protocol = { path = "../protocol" }
prdt-transport = { path = "../transport" }
prdt-signaling-client = { path = "../signaling-client" }
prdt-signaling-proto = { path = "../signaling-proto" }
url = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "sync", "time", "signal", "fs", "io-util"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
async-trait = "0.1"
thiserror = { workspace = true }
winit = "0.30"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
prdt-media-core = { path = "../media-core" }
prdt-media-win = { path = "../media-win", features = ["i420-upload"] }
prdt-media-sw = { path = "../media-sw" }
prdt-input-win = { path = "../input-win" }
prdt-gui-viewer = { path = "../gui-viewer" }
prdt-gui-common = { path = "../gui-common" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
prdt-media-linux = { path = "../media-linux", default-features = false }
prdt-input-linux = { path = "../input-linux" }
prdt-media-sw = { path = "../media-sw" }
softbuffer = "0.4"
bytemuck = "1"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }

[features]
# P2 — HEVC decode features forwarded onto prdt-media-linux (which in turn
# forwards onto prdt-media-ffmpeg). The viewer-side dispatch in
# crates/viewer/src/{lib.rs, platform/linux.rs} gates the new
# PlatformFrame::Nv12 / PlatformConsumer::FfmpegHevc* variants on the
# matching `-any` markers, so each backend can be compiled independently
# (sw-only / vaapi-only / nvdec-only) and the cfg cascade stays exhaustive.
ffmpeg-decode-hevc-sw = ["prdt-media-linux/ffmpeg-decode-hevc-sw", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-ffmpeg5", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-ffmpeg6", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-ffmpeg7", "ffmpeg-decode-hevc-sw-any"]
ffmpeg-decode-hevc-sw-any = []
ffmpeg-decode-hevc-vaapi = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-ffmpeg5", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-ffmpeg6", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-ffmpeg7", "ffmpeg-decode-hevc-vaapi-any"]
ffmpeg-decode-hevc-vaapi-any = []
ffmpeg-decode-hevc-nvdec = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-ffmpeg5", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-ffmpeg6", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-ffmpeg7", "ffmpeg-decode-hevc-nvdec-any"]
ffmpeg-decode-hevc-nvdec-any = []
# PR3 — Windows HDR10 display path. Forwarded onto prdt-media-win so the
# viewer binary can be built with HDR10 support enabled end-to-end.
media-win-hdr10 = ["prdt-media-win/media-win-hdr10"]
# F8 — Windows-native HEVC Main10 decode via Media Foundation. Forwarded onto
# prdt-media-win. Implicitly enables media-win-hdr10 via the prdt-media-win
# feature dependency (additive, per iter-2 REQUIRED MAJOR #5).
media-win-hevc-main10 = [
    "prdt-media-win/media-win-hevc-main10",
    "media-win-hdr10",
]

# P3.2 — HEVC Main10 decode features forwarded onto prdt-media-linux.
ffmpeg-decode-hevc-sw-main10 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-main10", "ffmpeg-decode-hevc-sw-main10-any"]
ffmpeg-decode-hevc-sw-main10-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-main10-ffmpeg5", "ffmpeg-decode-hevc-sw-main10-any"]
ffmpeg-decode-hevc-sw-main10-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-main10-ffmpeg6", "ffmpeg-decode-hevc-sw-main10-any"]
ffmpeg-decode-hevc-sw-main10-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-sw-main10-ffmpeg7", "ffmpeg-decode-hevc-sw-main10-any"]
ffmpeg-decode-hevc-sw-main10-any = []
ffmpeg-decode-hevc-vaapi-main10 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-main10", "ffmpeg-decode-hevc-vaapi-main10-any"]
ffmpeg-decode-hevc-vaapi-main10-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-main10-ffmpeg5", "ffmpeg-decode-hevc-vaapi-main10-any"]
ffmpeg-decode-hevc-vaapi-main10-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-main10-ffmpeg6", "ffmpeg-decode-hevc-vaapi-main10-any"]
ffmpeg-decode-hevc-vaapi-main10-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-vaapi-main10-ffmpeg7", "ffmpeg-decode-hevc-vaapi-main10-any"]
ffmpeg-decode-hevc-vaapi-main10-any = []
ffmpeg-decode-hevc-nvdec-main10 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-main10", "ffmpeg-decode-hevc-nvdec-main10-any"]
ffmpeg-decode-hevc-nvdec-main10-ffmpeg5 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-main10-ffmpeg5", "ffmpeg-decode-hevc-nvdec-main10-any"]
ffmpeg-decode-hevc-nvdec-main10-ffmpeg6 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-main10-ffmpeg6", "ffmpeg-decode-hevc-nvdec-main10-any"]
ffmpeg-decode-hevc-nvdec-main10-ffmpeg7 = ["prdt-media-linux/ffmpeg-decode-hevc-nvdec-main10-ffmpeg7", "ffmpeg-decode-hevc-nvdec-main10-any"]
ffmpeg-decode-hevc-nvdec-main10-any = []

[dev-dependencies]
tempfile = "3"
